--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
 
 
 .bg-image1 {
-  background-image: url("https://puu.sh/HhSC2/f4fd5c244c.gif");
+  background-image: url("https://c.tenor.com/XLnJxScKc3EAAAAC/car-animation.gif");
 }
 
 .bg-image2 {
