--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, html {
 }
 
 .bg-image2 {
-  background-image: url("https://puu.sh/HhSCp/12efb708e3.gif");
+  background-image: url("https://data.whicdn.com/images/349794710/original.gif");
 }
 
 .bg-image3 {
