--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
 
 
 .bg-image1 {
-  background-image: url("https://c.tenor.com/XLnJxScKc3EAAAAC/car-animation.gif");
+  background-image: url("https://data.whicdn.com/images/350682349/original.gif");
 }
 
 .bg-image2 {
@@ -18,7 +18,7 @@ body, html {
 }
 
 .bg-image3 {
-  background-image: url("https://puu.sh/HhSCp/12efb708e3.gif");
+  background-image: url("https://data.whicdn.com/images/345694842/original.gif");
 }
 
 .bg-image1, .bg-image2, .bg-image3 {
